<resources>
    <string name="app_name">TourPlanner2</string>
    <string name="icon">icon</string>
    <string name="ms_cfg">Explora la zona</string>
    <string name="planner">Planifica tu viaje</string>
    <string name="speedRoute">Te recomendamos</string>
    <string name="recomendedPlaces">A tu gusto</string>
    <string name="route">Mis rutas</string>
    <string name="advancedOptions">Ajustes</string>
    <string name="profile">Perfil</string>
    <string name="routeTime">Hora de llegada</string>
    <string name="departureTime">Hora de salida</string>
    <string name="transport">Cómo llegar</string>
    <string name="selectTransport">Medio de transporte</string>
    <string name="sendButton">Enviar</string>
    <string name="routingOptions">Modo de cálculo</string>
    <string name="categoriesFilter">Filtrado de categorías</string>
    <string name="hotel">Hotel</string>
    <string name="Hotel">Hotel</string>
    <string name="interestPoi">Punto de interés</string>
    <string name="map_activity">TourPlanner2</string>
    <string name="fast">Rápida</string>
    <string name="exhaustive">Exhaustiva</string>
    <string name="algoritm1">Colonia Hormigas</string>
    <string name="algoritm2">Evolutivo</string>
    <string name="originEqTarget">Origen y destino iguales</string>
    <string name="leisurePoi">Punto de interes de ocio</string>
    <string name="culturePoi">Punto de interes de cultura</string>
    <string name="naturePoi">Punto de interes de naturaleza</string>
    <string name="gastronomyPoi">Punto de interes de gastronomia</string>
    <string name="selectMap">Seleccionar en el mapa</string>
    <string name="selectMode">Selecciona modo</string>
    <string name="onTapSelectTarget">Mantén pulsado para seleccionar destino</string>
    <string name="onTapSelectSource">Mantén pulsado para seleccionar origen</string>
    <string name="confirmTarget">Confirmar destino</string>
    <string name="confirmSource">Confirmar origen</string>
    <string name="msgConfirmTarget">¿Establecer este punto como destino?</string>
    <string name="msgConfirmSource">¿Establecer este punto como origen?</string>
    <string name="yes">Si</string>
    <string name="no">No</string>
    <string name="calculating">Calculando itinerario&#8230;</string>
    <string name="gettingRecommendedPois">Obteniendo puntos recomendados&#8230;</string>
    <string name="configureItinearyFirst">Configura tu ruta primero</string>
    <string name="accept">Aceptar</string>
    <string name="pointInfo">Información del punto</string>
    <string name="selectPreferences">Selecciona tus preferencias</string>
    <string name="selectTarget">Selecciona tu destino</string>
    <string name="selectHotel">Selecciona tu hotel</string>
    <string name="selectOrigin">Selecciona tu origen</string>
    <string name="insertCity">Introduce ciudad</string>
    <string name="insertHotel">Introduce el hotel</string>
    <string name="incorrectCity">Ciudad incorrecta</string>
    <string name="incorrectHotel">Hotel incorrecto</string>
    <string name="register">Registro</string>
    <string name="email">Email</string>
    <string name="password">Contraseña</string>
    <string name="confirmPassword">Confirma contraseña</string>
    <string name="rememberPassword">Recordar contraseña</string>
    <string name="emailToShort">Email demasiado corto</string>
    <string name="passwordToShort">Contraseña demasiada corta</string>
    <string name="mustFillIn">Debes rellenar todos los campos</string>
    <string name="registering">Registrandote&#8230;</string>
    <string name="incorrectPassword">Contraseña incorrecta</string>
    <string name="noRegistered">Usuario no registrado</string>
    <string name="cancel">Cancelar</string>
    <string name="selectOption">Selecciona opción</string>
    <string name="targetOptions">Opciones del destino</string>
    <string name="mustSelectPreferences">Debe seleccionar alguna preferencia</string>
    <string name="sendRating">Emitir votación</string>
    <string name="calculateIterary">Calcular ruta</string>
    <string name="yourActivity">Tu actividad</string>
    <string name="visitedPois">Sitios visitados</string>
    <string name="favourites">Mis favoritos</string>
    <string name="giveOPinion">Danos tu opinión</string>
    <string name="experience">Experiencias</string>
    <string name="seeExperiences">Ver experiencias de otros usuarios</string>
    <string name="origin">Origen</string>
    <string name="target">Destino</string>
    <string name="userName">Nombre de usuario</string>
    <string name="registerTourPlanner">Regístrate en TourPlanner</string>
    <string name="profileDialogInfo">Regístrate y podrás emitir valoraciones sobre los lugares visitados. ¡Adelante!</string>
    <string name="enter">Entrar</string>
    <string name="createAccount">Crear una cuenta</string>
    <string name="registerName">Nombre y apellidos</string>
    <string name="logout">Cerrar sesión</string>
    <string name="close">Cerrar</string>
    <string name="enterTourPlanner">Entrar en TourPlanner</string>
    <string name="sessionClosed">Sesión cerrada</string>
    <string name="car">Coche</string>
    <string name="pedestrian">A pie</string>
    <string name="noSend">No enviar</string>
    <string name="explore">Explorar</string>
    <string name="plan">Planificar</string>
    <string name="broadcast">Emitir</string>
    <string name="noOpinions">Todavía no se ha valorado este lugar ¡Sé el primero!</string>
    <string name="logging">Iniciando sesión&#8230;</string>
    <string name="gpsNotEnabled">El GPS está desactivado ¿Desea activarlo?</string>
    <string name="MSG_ERROR_NOT_TARGET_POI_CATEGORY_SELECTED">No existe en los puntos cercanos un punto de interés de la categoría seleccionada. Prueba a incrementar el interés para esa categoría.</string>
    <string name="MSG_ERROR_UNCONNECTED_POIS">Existen algunos puntos de interés inconexos. No ha podido generarse correctamente la ruta</string>
    <string name="MSG_ERROR_NOT_FEASIBLE_ROUTE">La generación de la ruta no es factible. (¿Tiempo insuficiente?)</string>
    <string name="MSG_ERROR_INTERNAL">Error interno del sistema</string>
    <string name="mustSelectPoi">Debe seleccionar al menos un punto</string>
    <string name="bar">Bar</string>
    <string name="cathedral">Catedral</string>
    <string name="bbq">Barbacoa</string>
    <string name="biergarten">Terraza</string>
    <string name="cafe">Cafetería</string>
    <string name="fast_food">Comida rapida</string>
    <string name="food_court">Plaza de comida</string>
    <string name="ice_cream">Heladeria</string>
    <string name="pub">Pub</string>
    <string name="restaurant">Restaurante</string>
    <string name="library">Biblioteca</string>
    <string name="artwork">Pieza de arte</string>
    <string name="arts_centre">Zona de arte</string>
    <string name="cinema">Cine</string>
    <string name="fountain">Fuente</string>
    <string name="nightclub">Discoteca</string>
    <string name="theatre">Teatro</string>
    <string name="courthouse">Juzgados</string>
    <string name="crypt">Cripta</string>
    <string name="embassy">Emabajada</string>
    <string name="place_of_worship">Lugar de culto</string>
    <string name="sauna">Sauna</string>
    <string name="townhall">Ayuntamiento</string>
    <string name="commercial">Zona de comercio</string>
    <string name="retail">Area de comercio</string>
    <string name="chapel">Capilla</string>
    <string name="church">Iglesia</string>
    <string name="farm_auxiliary">Cobertizo</string>
    <string name="palaeontological_site">Yacimiento</string>
    <string name="outcrop">Afloramiento rocoso</string>
    <string name="archaeological_site">Restos arqueológicos</string>
    <string name="battlefield">Campo de batalla</string>
    <string name="castle">Castillo</string>
    <string name="farm">Granja</string>
    <string name="fort">Fortaleza</string>
    <string name="manor">Mansión historica</string>
    <string name="memorial">Pequeño monumento</string>
    <string name="monument">Monumento</string>
    <string name="ruins">Ruinas</string>
    <string name="rune_stone">Piedras rúnicas</string>
    <string name="museum">Museo</string>
    <string name="farmland">Tierra de cultivo</string>
    <string name="farmyard">Area de granja</string>
    <string name="forest">Bosque</string>
    <string name="fishing">Zona de pesca</string>
    <string name="theme_park">Paque temático</string>
    <string name="marina">Puerto deportivo</string>
    <string name="nature_reserve">Reserva natural</string>
    <string name="water_park">Parque acuático</string>
    <string name="bay">Bahía</string>
    <string name="beach">Playa</string>
    <string name="coastline">Costa</string>
    <string name="cave_entrance">Cueva</string>
    <string name="cliff">Acantilado</string>
    <string name="spring">Manantial</string>
    <string name="volcano">Volcán</string>
    <string name="wetland">Marisma</string>
    <string name="viewpoint">Mirador</string>
    <string name="wood">Arboleda</string>
    <string name="department_store">Centro comercial</string>
    <string name="alpine_hut">Cabaña</string>
    <string name="zoo">Zoo</string>
    <string name="leisure">Ocio</string>
    <string name="culture">Cultura</string>
    <string name="gastronomy">Gastronomía</string>
    <string name="nature">Naturaleza</string>
    <string name="detailedInfo">Información detallada del punto</string>
    <string name="share">Compartir experiencia</string>
    <string name="shareIn">Compartir en</string>
    <string name="messagePostedIn">Mensaje publicado en </string>
    <string name="info">Más info&#8230;</string>
    <string name="rating">Valoraciones</string>
    <string name="noWikipediaInfo">No se ha encontrado información sobre este punto de interés</string>
    <string name="infoMyLocation">Espere por favor, se está obteniendo su ubicación&#8230;</string>
    <string name="location">Mi ubicación</string>
    <string name="itinerary">Itinerario en lista</string>
    <string name="networkNotEnabled">Se necesita conexión a Internet para comenzar la descarga</string>
    <string name="networkNotEnabledSaveRoute">Se necesita conexión a Internet para guardar la ruta en el servidor</string>
    <string name="networkOffline">No dispone de conexión a Internet por lo que algunas funciones no estarán disponibles, ¿desea activarla?</string>
    <string name="networkNotEnabledShowRoute">Se necesita conexión a Internet para obtener la ruta guardada en el servidor</string>
    <string name="networkNotEnabledDeleteRoute">Se necesita conexión a Internet para eliminar la ruta guardada en el servidor</string>
    <string name="networkNotEnabledLoadRoute">Se necesita conexión a Internet para cargar las rutas guardada en el servidor</string>
    <string name="notification_download">Tourplanner: Mapa de %1$s</string>
    <string name="notification_finish">Descarga finalizada</string>
    <string name="delete_file">Los archivos descargados han sido eliminados</string>
    <string name="cancel_download">¿Desea cancelar la descarga del mapa?</string>
    <string name="delete_download">¿Desea eliminar el mapa seleccionado?</string>
    <string name="save_route">Guardar ruta</string>
    <string name="save_route_server">Guardando ruta en el servidor&#8230;</string>
    <string name="route_name">Introduce el nombre de la ruta</string>
    <string name="mobile">Guardar en el dispositivo</string>
    <string name="save">Guardar</string>
    <string name="load_route">Cargar ruta</string>
    <string name="downloaded_maps">Mapas descargados</string>
    <string name="no_image">Imagen no disponible</string>
    <string name="promoted">Promocionado: %1$s</string>
    <string name="distance">%1$s %2$s de distancia</string>
    <string name="panoramio_terms">Photos provided by Panoramio are under the copyright of their owners</string>
</resources>